test/types/string/bradc/substring/substringBadRange.good
str[12..13] = lm
substringBadRange.chpl:4: error: halt reached - range out of bounds of string
