test/types/string/bradc/substring/substringBadRange.chpl
var str = "abcdefghijklm";

writeln("str[12..13] = ", str[12..13]);
writeln("str[12..16] = ", str[12..16]);
